--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-10">
+            <h1>Routing Examples!</h1>
+            <hr>
+
+ <a [routerLink]="['']">Home Page</a>
+  <a [routerLink]="['students']">Students</a>
+
+   <hr>
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
